logs/protojson.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Protojson-11.5.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/protojson'...
Compiling './lib/python3.5/site-packages/protojson/pbliteserializer.py'...
***   File "./lib/python3.5/site-packages/protojson/pbliteserializer.py", line 147
    except (TypeError, ValueError), e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/protojson/run_tests.py'...
***   File "./lib/python3.5/site-packages/protojson/run_tests.py", line 29
    print "sys.path[0] is now", repr(sys.path[0])
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/protojson/test_pbliteserializer.py'...
***   File "./lib/python3.5/site-packages/protojson/test_pbliteserializer.py", line 190
    for pblite in [None, 3, 4L, 0.5]:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
